<resources>
    <string name="app_name">WHM</string>
    <string name="prompt_email">Enter User Id</string>
    <string name="prompt_password">Password</string> c
    <string name="login">Login</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="logo_text">A1 WHM </string>
    <string name="logotextname">Warehouse Management System</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test</string>
    <string name="nav_header_subtitle">test.studio@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="OrderList">Load Orders  </string>
    <string name="menu_home" formatted="true">A1 WHM</string>
    <string name="menu_gallery">Inventory Check</string>
    <string name="menuassignorder">Unload Orders</string>
    <string name="menu_slideshow">Logout</string>
    <string name="title_activity_scanproduct">scanproduct</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="product_fragment_label">Product Fragment</string>
    <string name="product_list_fragment">Manual Load Order</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="Inventoryreceiv">New PO Receive</string>
    <string name="btninventorypodraftlist">Draft PO Receive List</string>
    <string name="btnsubmitpolist">Submit PO Receive List</string>
    <string name="btnrevertpolist">Revert PO Receive List</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="scancode">Scan security</string>
    <string name="picallboxes">Pick all boxes</string>
    <string name="Api"></string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submitted_lang">Submitted language:</string>

    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
        <item>Javascript</item>
        <item>Jquery</item>
    </string-array>
</resources>

