<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    android:layout_gravity="center"
    android:textAlignment="center"
    >

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"
        android:layout_gravity="center"
        android:textAlignment="center"
        />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_productlist"
        android:name="com.example.myapplication.ui.product.ProductList"
        android:label="@string/product_list_fragment"
        tools:layout="@layout/fragment_product_list" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/activity_main" />
</navigation>