<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="Home" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_product_adf_scanner_24"
            android:title="Inventory Check" />
        <item
            android:id="@+id/nav_productlist"
            android:icon="@drawable/order"
            android:title="@string/product_list_fragment" />
        <item
            android:id="@+id/nav_orderlist"
            android:icon="@drawable/loadorders"
            android:title="@string/OrderList" />
        <item
            android:id="@+id/nav_assignorder"
            android:icon="@drawable/unloadorders"
            android:title="@string/menuassignorder" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_loadorder"
            android:icon="@drawable/ic_menu_logout"
            android:title="Load Order" />
    </group>
    <item android:title= "Version"
        android:id="@+id/version"
        android:visible="false">
        <menu>


            <item

                android:title= "" />
        </menu>
    </item>


</menu>