<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    android:background="@drawable/backgroundimg"
    android:padding="16dp"
    tools:context=".com.example.whm.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:padding="15dp"
                android:visibility="visible"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toTopOf="@+id/txtAppVersion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.44">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/relativeLayout">


                    <ImageView
                        android:id="@+id/profile"
                        android:layout_width="147dp"
                        android:layout_height="116dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:padding="15dp"
                        android:src="@drawable/logo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textlogo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profile"
                        android:text="@string/logo_text"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile"></TextView>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textlogo"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/logotextname"
                        android:textAlignment="center"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textlogo"></TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/user_person_24"
                        android:drawableLeft="@drawable/user_person_24"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        app:startIconDrawable="@drawable/user_person_24">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="180dp"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:singleLine="true"
                            android:visibility="gone" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/passowrd_vpn_key_24"
                        android:drawableLeft="@drawable/passowrd_vpn_key_24"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/emailError"
                        app:passwordToggleEnabled="true"
                        app:startIconDrawable="@drawable/passowrd_vpn_key_24">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingStart="5dp"
                            android:singleLine="true"

                            android:visibility="gone" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/scancode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:drawableStart="@drawable/passowrd_vpn_key_24"
                        android:drawableLeft="@drawable/passowrd_vpn_key_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        app:startIconDrawable="@drawable/passowrd_vpn_key_24">

                        <EditText
                            android:id="@+id/scancodeu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="180dp"
                            android:focusable="true"
                            android:hint="@string/scancode"
                            android:inputType="textPassword"
                            android:paddingStart="2dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/no_internet" />

            <TextView
                android:id="@+id/txtAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>


</RelativeLayout>